--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="images/favicon-google.jpg" type="image/x-icon"/>
     <title>Clone do Google</title>
     <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/header.css">
   </head>
   <body>
     <header>
@@ -16,7 +17,7 @@
           <li><a href="#">Imagens</a></li>
           <li>
             <div class="highlight-icon">
-              <a href="#" class="menu-icon">
+              <a href="#">
                 <i class="fa-solid fa-bars"></i>
               </a>
             </div>
