Adding style in the main content

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Clone do Google</title>
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="css/content.css">
   </head>
   <body>
     <header>
@@ -45,8 +46,8 @@
             class="searchInput"
             placeholder="Pesquise ou digite uma URL"
           />
-          <i class="fa-solid fa-keyboard"></i>
-          <i class="fa-solid fa-microphone"></i>
+            <i class="fa-solid fa-keyboard"></i>
+            <i class="fa-solid fa-microphone"></i>
         </div>
         <div class="btns-container">
           <button>Pesquisar</button>
