Create Java Script file and add some interaction

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <i class="fa-solid fa-microphone"></i>
         </div>
         <div class="btns-container">
-          <button>Pesquisar</button>
+          <button class="searchBtn">Pesquisar</button>
           <button>Estou com sorte</button>
         </div>
         <div class="language">
@@ -87,4 +87,5 @@
     src="https://kit.fontawesome.com/93c4210ca3.js"
     crossorigin="anonymous"
   ></script>
+  <script src="script.js"></script>
 </html>
